kubernetes-manifests/juice-shop/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop-loadbalancer
spec:
  selector:
    app: juice-shop
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juice-shop
  labels:
    demo: roadshow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juice-shop
  template:
    metadata:
      labels:
        app: juice-shop
    spec:
      containers:
      - name: juice-shop
        image: quay.io/mfoster/vulnerable-demo-applications:juice-shop-0.2
        ports:
        - containerPort: 3000
