kubernetes-manifests/juice-shop/everything.yml
apiVersion: v1
kind: Namespace
metadata:
  name: juice-shop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juice-shop
  namespace: juice-shop
  labels:
    app: juice-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juice-shop
  template:
    metadata:
      labels:
        app: juice-shop
    spec:
      containers:
        - name: juice-shop
          image: quay.io/mfoster/juice-shop:latest
          ports:
            - containerPort: 3000
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
  namespace: juice-shop
spec:
  selector:
    app: juice-shop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: juice-shop
  namespace: juice-shop
spec:
  to:
    kind: Service
    name: juice-shop
  port:
    targetPort: 80
  tls:
    termination: edge
  wildcardPolicy: None
